# integration

./: README.md  deep_nn.ipynb  l1_vs_l2_reg_log.ipynb  notes.org
eda/: README.md  pyproject.toml  sparse_autoencoders.ipynb
task1/: README.md
task1/data/: Kim_clinical.tsv  compass_gide_clinical.tsv  tcga_example_test.tsv  tcga_example_train.tsv
